refactor: leetcode
- 310. minimum height trees