@@ -4,33 +4,49 @@ import java.util.*;
 
 public class MinimumHeightTrees {
     public List<Integer> findMinHeightTrees(int n, int[][] edges) {
-        if (n == 1) return List.of(0);
-        Map<Integer, List<Integer>> graph = new HashMap<>();
+        if (n == 1) return new ArrayList<>(Arrays.asList(0));
 
-        for (int[] edge : edges) {
-            graph.putIfAbsent(edge[0], new ArrayList<>());
-            graph.putIfAbsent(edge[1], new ArrayList<>());
-            graph.get(edge[0]).add(edge[1]);
-            graph.get(edge[1]).add(edge[0]);
+        List<Integer> result = new ArrayList<>();
+        int[] indegree = new int[n];
+
+        List<List<Integer>> adj = new ArrayList<>();
+        for (int i = 0; i < n; i++) {
+            adj.add(new ArrayList<>());
         }
 
-        List<Integer> leaves = new ArrayList<>();
-        for (int i = 0; i < n; i++)
-            if (graph.get(i).size() == 1) leaves.add(i);
+        for(int[] ed:edges){
+            adj.get(ed[0]).add(ed[1]);
+            adj.get(ed[1]).add(ed[0]);
+            indegree[ed[0]]++;
+            indegree[ed[1]]++;
+        }
 
-        while (n > 2) {
-            n -= leaves.size();
-            List<Integer> newLeaves = new ArrayList<>();
+        Queue<Integer> q = new LinkedList<>();
 
-            for (int leaf : leaves) {
-                int neighbor = graph.get(leaf).get(0);
-                graph.get(neighbor).remove((Object) leaf);
-                if (graph.get(neighbor).size() == 1) newLeaves.add(neighbor);
+        for(int i = 0; i < n; i++){
+            if(indegree[i] == 1){
+                q.add(i);
             }
-
-            leaves = newLeaves;
         }
 
-        return leaves;
+        while(n > 2){
+            int size = q.size();
+            n = n - size;
+
+            for(int i = 0; i < size; i++){
+                int leaf = q.poll();
+
+                for(int x : adj.get(leaf)) {
+                    indegree[x]--;
+                    if(indegree[x] == 1) q.add(x);
+                }
+            }
+        }
+
+        while (!q.isEmpty()) {
+            result.add(q.poll());
+        }
+
+        return result;
     }
 }
